[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/actors/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://src/actors/player.gd" type="Script" id=2]
[ext_resource path="res://sprite/eaint_wallk1.png" type="Texture" id=3]
[ext_resource path="res://sprite/player/eaint_jump.png" type="Texture" id=4]
[ext_resource path="res://sprite/eaint_wallk3.png" type="Texture" id=5]
[ext_resource path="res://sprite/eaint_wallk4.png" type="Texture" id=6]
[ext_resource path="res://sprite/player/Ladii walk 1.png" type="Texture" id=7]
[ext_resource path="res://sprite/player/Ladii walk 4.png" type="Texture" id=8]
[ext_resource path="res://sprite/player/Ladii walk 2.png" type="Texture" id=9]
[ext_resource path="res://sprite/player/Ladia jump2.png" type="Texture" id=10]
[ext_resource path="res://sprite/eaint_wallk2.png" type="Texture" id=11]
[ext_resource path="res://sprite/player/Ladii walk 3.png" type="Texture" id=12]

[sub_resource type="Animation" id=8]
resource_name = "Ladii_idle"
length = 0.668
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../Ladia")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="GDScript" id=13]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]
script = SubResource( 13 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "L_jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 8 ) ],
"loop": true,
"name": "L_walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 53.75, 50.4688 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 62.8125, 63.4375 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 64.8288, 61.4711 )

[node name="player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 2 )
speed = Vector2( 400, 1500 )
gravity = 4500
bouncy = -2500

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Eaint")
anims/Ladii_idle = SubResource( 8 )

[node name="Eaint" type="AnimatedSprite" parent="."]
position = Vector2( -39, -74 )
scale = Vector2( 0.902299, 0.78 )
frames = SubResource( 14 )
animation = "Walk"
frame = 3
speed_scale = 0.3
playing = true

[node name="Ladia" type="AnimatedSprite" parent="."]
position = Vector2( 33, -77 )
scale = Vector2( 0.87, 0.8 )
frames = SubResource( 12 )
animation = "L_walk"
frame = 2
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 12, -94 )
current = true
zoom = Vector2( 1.7, 1.7 )
limit_left = -175
limit_top = -710
limit_right = 7480
limit_bottom = 847
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.15
drag_margin_top = 0.48
drag_margin_right = 0.11
drag_margin_bottom = 0.54
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 1 )

[node name="ShiftTween" type="Tween" parent="Camera2D"]

[node name="enemyDetector" type="Area2D" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 1.2, 1 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyDetector"]
modulate = Color( 0.172549, 0.117647, 0.823529, 1 )
position = Vector2( -0.416665, -50.5313 )
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.75, -52 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 10 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 6.74999, -50 )
scale = Vector2( 0.805969, 0.813359 )
shape = SubResource( 9 )

[connection signal="area_entered" from="enemyDetector" to="." method="_on_enemyDetector_area_entered"]
[connection signal="body_entered" from="enemyDetector" to="." method="_on_enemyDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
